freesia/manifests/immich/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: immich
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
    app.kubernetes.io/part-of: immich
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: redis
