freesia/manifests/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: immich.harvestasya.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: immich-server
            port:
              name: http
