freesia/manifests/immich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich

spec:
  routes:
  - kind: Rule
    match: Host(`chronicle.harvestasya.org`)
    services:
    - name: immich-server
      port: 2283
