freesia/manifests/immich/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: chronicle.harvestasya.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: immich-server
            port:
              name: http
